2004-01-22  Michael Natterer  <mitch@gimp.org>
	* app/core/gimplayer-floating-sel.c (floating_sel_anchor):
	explicitly activate the drawable the floating selection was
	attached to (function was relying on implicit voodoo that
	happened 1.2). Fixes bug #132162.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12126 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-01-22  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimplayer-floating-sel.c (floating_sel_anchor):
+	explicitly activate the drawable the floating selection was
+	attached to (function was relying on implicit voodoo that
+	happened 1.2). Fixes bug #132162.
+
+2004-01-22  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/gimpitem.[ch]: added "gboolean use_default_values"
 	to GimpItem::stroke().
 
