2004-01-21  Manish Singh  <yosh@gimp.org>
        * configure.in
        * plug-ins/FractalExplorer/Makefile.am: renamed obnoxiously long
        fractalexplorer-examples directory to simply examples.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12128 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-21  Manish Singh  <yosh@gimp.org>
 
+	* configure.in
+	* plug-ins/FractalExplorer/Makefile.am: renamed obnoxiously long
+	fractalexplorer-examples directory to simply examples.
+
+2004-01-21  Manish Singh  <yosh@gimp.org>
+
 	* configure.in: modernized, made a lot of things m4 macros, and made
 	versioning a lot more finegrained, in anticipation for post-2.0.
 
