2004-01-21  Manish Singh  <yosh@gimp.org>
        * m4macros/gimp-2.0.m4: quote AM_PATH_GIMP_2_O properly so automake
        1.8 won't whine at us.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12129 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-21  Manish Singh  <yosh@gimp.org>
 
+	* m4macros/gimp-2.0.m4: quote AM_PATH_GIMP_2_O properly so automake
+	1.8 won't whine at us.
+
+2004-01-21  Manish Singh  <yosh@gimp.org>
+
 	* configure.in
 	* plug-ins/FractalExplorer/Makefile.am: renamed obnoxiously long
 	fractalexplorer-examples directory to simply examples.
