--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-22  Tor Lillqvist  <tml@iki.fi>
+
+	* gimptool-win32.c.in (get_prefix): Use GIMP_APP_VERSION.
+
 2004-01-21  Manish Singh  <yosh@gimp.org>
 
 	* m4macros/gimp-2.0.m4: quote AM_PATH_GIMP_2_O properly so automake
