--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2004-01-22  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/common/gbr.c
+	* plug-ins/common/pat.c: store the brush/pattern's name in a
+	parasite attached to the image. The parasite overrides the
+	RUN_WITH_LAST_VALS logic if it exists. Consistently set the
+	description as the layer's name, but ignore the layer's name
+	when saving because it may have been modified by exporting.
+	Fixes bug #131450.
+
+	Misc. cleanup/fixes: Don't assume that strncpy() nul-terminates
+	the buffer, use sizeof() instead of magic numbers, sanitize
+	descriptions using gimp_any_to_utf8(), always use strncpy()
+	instead of strcpy().
+
+	* devel-docs/parasites.txt: document the "gimp-brush-name" and
+	"gimp-pattern-name" parasites.
+
 2004-01-22  Tor Lillqvist  <tml@iki.fi>
 
 	* gimptool-win32.c.in (get_prefix): Use GIMP_APP_VERSION.
