--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-22  Ville Pätsi  <drc@gimp.org>
+
+	* gimp.spec.in: Added a depedency for libexif
+
 2004-01-22  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/gbr.c
