--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-22  Sven Neumann  <sven@gimp.org>
+
+	* debian/*: removed outdated and unmaintained debian package
+	description. The debian package is well maintained without keeping
+	these files in our CVS tree.
+
 2004-01-22  Ville Pätsi  <drc@gimp.org>
 
 	* gimp.spec.in: Added a depedency for libexif
