--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-22  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-01-21  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
