--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-22  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-01-20  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
