--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-22  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-01-21  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
