2004-01-22  Sven Neumann  <sven@gimp.org>
	* configure.in: libgimpmodule depends on gmodule-2.0 and gobject-2.0.
	Incorporate both into GMODULE_CFLAGS and GMODULE_LIBS.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12137 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-22  Sven Neumann  <sven@gimp.org>
 
+	* configure.in: libgimpmodule depends on gmodule-2.0 and gobject-2.0.
+	Incorporate both into GMODULE_CFLAGS and GMODULE_LIBS.
+
+2004-01-22  Sven Neumann  <sven@gimp.org>
+
 	* debian/*: removed outdated and unmaintained debian package
 	description. The debian package is well maintained without keeping
 	these files in our CVS tree.
