2004-01-22  Manish Singh  <yosh@gimp.org>
        * plug-ins/common/plugin-defs.pl
        * plug-ins/common/Makefile.am: renamed ps to postscript, so automake
        doesn't get confused.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12140 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-22  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/common/plugin-defs.pl
+	* plug-ins/common/Makefile.am: renamed ps to postscript, so automake
+	doesn't get confused.
+
 2004-01-22  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: libgimpmodule depends on gmodule-2.0 and gobject-2.0.
