--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-23  Henrik Brix Andersen  <brix@gimp.org>
+
+	* plug-ins/common/.cvsignore: s/ps/postscript/ to shut up cvs.
+
 2004-01-22  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/common/plugin-defs.pl
