--- a/tips/sr.po
+++ b/tips/sr.po
@@ -1,5 +1,5 @@
 # Serbian translation of gimp-tips
-# Courtesy of Prevod.org team (http://www.prevod.org/) -- 2003.
+# Courtesy of Prevod.org team (http://www.prevod.org/) -- 2003, 2004.
 #
 # This file is distributed under the same license as the gimp-tips package.
 #
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp-tips 1.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-07-21 00:18+0200\n"
-"PO-Revision-Date: 2004-01-15 07:35+0100\n"
+"POT-Creation-Date: 2004-01-23 12:56+0100\n"
+"PO-Revision-Date: 2004-01-23 12:58+0100\n"
 "Last-Translator: Александар Урошевић <urke@users.sourceforge.net>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -46,10 +46,9 @@ msgstr ""
 "боје цртања."
 
 #: tips/gimp-tips.xml.in.h:5
-#, fuzzy
 msgid ""
-"<tt>Ctrl</tt>-drag with the Transform tool in rotation mode will constrain "
-"the rotation to 15 degree angles."
+"<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
+"degree angles."
 msgstr ""
 "<tt>Ctrl</tt>-превлачење са алатом за ротацију ће ограничити ротацију на "
 "углове који су умножак 15 степени."
@@ -76,12 +75,11 @@ msgstr ""
 "мени за обављање ових акција."
 
 #: tips/gimp-tips.xml.in.h:8
-#, fuzzy
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
-"menu item, and pressing the desired key combination. This is saved when you "
-"exit GIMP."
+"menu item, and pressing the desired key combination. If \"Save Keyboard "
+"Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
 "Након што омогућите динамичке пречице са тастатуре у прозорчету за поставке, "
 "моћи ћете да промените пречице. То радите тако што прикажете мени, изаберете "
@@ -112,11 +110,10 @@ msgstr ""
 "Кривуље)."
 
 #: tips/gimp-tips.xml.in.h:11
-#, fuzzy
 msgid ""
-"If you stroke a path (Edit-&gt;Stroke), the current drawing tool and its "
-"settings are used. You can use the Paintbrush in gradient mode, the Clone "
-"tool with a pattern or even the Eraser or the Smudge tool."
+"If you stroke a path (Edit-&gt;Stroke Selection), the paint tools can be "
+"used with their current settings. You can use the Paintbrush in gradient "
+"mode or even the Eraser or the Smudge tool."
 msgstr ""
 "Уколико исцртате путању (Уређивање-&gt;Исцртај избор), користи се текући "
 "алат за цртање и његова подешавања. Можете користити четкицу у режиму "
@@ -132,10 +129,9 @@ msgstr ""
 "како би омогућили сакривање или приказивање палете алата и осталих дијалога."
 
 #: tips/gimp-tips.xml.in.h:13
-#, fuzzy
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
-"you will have to merge all layers (Layers-&gt;Flatten Image) if you want the "
+"you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
 "Већина додатака врши измене на текућем слоју текуће слике. У неким "
@@ -152,12 +148,11 @@ msgstr ""
 "грешка се може опозвати..."
 
 #: tips/gimp-tips.xml.in.h:15
-#, fuzzy
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
-"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Add Alpha Channel) or "
-"flatten it (Layers-&gt;Flatten Image)."
+"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Transparency-&gt;Add "
+"Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
 "Не могу се сви ефекти применити на све врсте слика. Ово се означава "
 "онемогућеном ставком менија. Можда је потребно променити режим слике на RGB "
@@ -234,17 +229,6 @@ msgstr ""
 "добијена селекција аутоматски додирнути вођице."
 
 #: tips/gimp-tips.xml.in.h:22
-#, fuzzy
-msgid ""
-"Using Edit-&gt;Stroke allows you to draw simple squares or circles by "
-"painting the edge of your current selection with the active brush. More "
-"complex shapes can be drawn with Filters-&gt;Render-&gt;Gfig."
-msgstr ""
-"Употребом Уређивање-&gt;Исцртај можете цртати једноставне квадрате и "
-"кругове. Ово исцртава ивице текућег избора. Сложенији облици се могу цртати "
-"помоћу алата за путање или Филтери-&gt;Исцртавање-&gt;Gfig."
-
-#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When using a drawing tool (Paintbrush, Airbrush, or Pencil), <tt>Shift</tt>-"
 "click will draw a straight line from your last drawing point to your current "
@@ -256,7 +240,7 @@ msgstr ""
 "позиције курсора. Ако притиснете <tt>Ctrl</tt>, моћи ћете да линију ротирате "
 "под углом од 15°."
 
-#: tips/gimp-tips.xml.in.h:24
+#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When you save an image to work on it again later, try using XCF, the GIMP's "
 "native file format (use the file extension <tt>.xcf</tt>). This preserves "
@@ -268,13 +252,17 @@ msgstr ""
 "На овај начин ће слојеви и сви аспекти Ваше „обраде у току“ бити сачувани. "
 "Једном када завршите пројекат, можете га сачувати као JPEG, PNG, GIF, ..."
 
-#: tips/gimp-tips.xml.in.h:25
-msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
+#: tips/gimp-tips.xml.in.h:24
+msgid ""
+"You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If this "
+"makes the window move, your window manager uses the <tt>Alt</tt> key "
+"already. Try pressing <tt>Shift</tt> at the same time."
 msgstr ""
-"Можете прилагодити и заменити селекцију употребом комбинације <tt>Alt</tt>-"
-"повлачење."
+"Можете прилагодити и разместити избор употребом <tt>Alt</tt>-превлачења. "
+"Уколико се тада ваш прозор помери, онда ваш управник прозорима већ користи "
+"<tt>Alt</tt> тастер. Покушајте са притиском на <tt>Shift</tt> истовремено."
 
-#: tips/gimp-tips.xml.in.h:26
+#: tips/gimp-tips.xml.in.h:25
 msgid ""
 "You can adjust the selection range for fuzzy select by clicking and dragging "
 "left and right."
@@ -282,17 +270,16 @@ msgstr ""
 "Можете прилагодити област селекције за нејасну селекцију ако кликнете и "
 "превлачите курсор лево и десно."
 
-#: tips/gimp-tips.xml.in.h:27
-#, fuzzy
+#: tips/gimp-tips.xml.in.h:26
 msgid ""
-"You can create and edit complex selections using the Bezier tool. The Paths "
+"You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
 "Можете направити и уређивати сложене изборе помоћу алата за путање. Прозорче "
 "за путање дозвољава рад са више путања и претварање истих у изборе."
 
-#: tips/gimp-tips.xml.in.h:28
+#: tips/gimp-tips.xml.in.h:27
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
@@ -301,7 +288,7 @@ msgstr ""
 "на палету алата. На тај начин ће се направити нова слика која садржи само "
 "тај слој."
 
-#: tips/gimp-tips.xml.in.h:29
+#: tips/gimp-tips.xml.in.h:28
 msgid ""
 "You can drag and drop many things in the GIMP. For example, dragging a color "
 "from the toolbox or from a color palette and dropping it into an image will "
@@ -310,6 +297,16 @@ msgstr ""
 "Можете превући и пустити пуно ствари у Гимпу. На пример, превлачењем боје са "
 "палете алата или са палете боја и пуштањем на слику, учинићете да се слика "
 "или селекција обоје одабраном бојом."
+
+#: tips/gimp-tips.xml.in.h:29
+msgid ""
+"You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
+"strokes the edge of your current selection. More complex shapes can be drawn "
+"using the Path tool or with Filters-&gt;Render-&gt;Gfig."
+msgstr ""
+"Употребом Уређивање-&gt;Исцртај можете цртати једноставне квадрате и "
+"кругове. Ово исцртава ивице текућег избора. Сложенији облици се могу цртати "
+"помоћу алата за путање или Филтери-&gt;Исцртавање-&gt;Gfig."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
@@ -378,15 +375,10 @@ msgstr ""
 "жељи бојењем по слици и поново кликните на ово дугме да би се маска "
 "претворила назад у обичан избор."
 
-#~ msgid ""
-#~ "You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If "
-#~ "this makes the window move, your window manager uses the <tt>Alt</tt> key "
-#~ "already. Try pressing <tt>Shift</tt> at the same time."
+#~ msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
 #~ msgstr ""
-#~ "Можете прилагодити и разместити избор употребом <tt>Alt</tt>-превлачења. "
-#~ "Уколико се тада ваш прозор помери, онда ваш управник прозорима већ "
-#~ "користи <tt>Alt</tt> тастер. Покушајте са притиском на <tt>Shift</tt> "
-#~ "истовремено."
+#~ "Можете прилагодити и заменити селекцију употребом комбинације <tt>Alt</"
+#~ "tt>-повлачење."
 
 #~ msgid ""
 #~ "If your fonts turn out blocky, that's because they're not scalable fonts. "
