2004-01-23  Manish Singh  <yosh@gimp.org>
        * configure.in: made the pygtk minimum version an m4 define as well.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12148 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-23  Manish Singh  <yosh@gimp.org>
+
+	* configure.in: made the pygtk minimum version an m4 define as well.
+
 2004-01-23  Michael Natterer  <mitch@gimp.org>
 
 	* app/app_procs.c
