Updated French translation.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12150 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,5 +1,6 @@
 2004-01-23  Christophe Merlet  <redfox@redfoxcenter.org>
 
+	* POTFILES.in: Updated.
 	* fr.po: Updated French translation from
 	Raymond Ostertag <r.ostertag@caramail.com>.
 
