2004-01-23  Simon Budig  <simon@gimp.org>
	* plug-ins/common/mosaic.c: properly use src_rgn.rowstride when
	initializing the target region. Fixes bug #132271.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12151 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-23  Simon Budig  <simon@gimp.org>
+
+	* plug-ins/common/mosaic.c: properly use src_rgn.rowstride when
+	initializing the target region. Fixes bug #132271.
+
 2004-01-23  Manish Singh  <yosh@gimp.org>
 
 	* configure.in: made the pygtk minimum version an m4 define as well.
