--- a/HACKING
+++ b/HACKING
@@ -5,7 +5,7 @@ to have the following packages (or newer versions) installed:
 
     * GNU autoconf 2.52
         - ftp://ftp.gnu.org/gnu/autoconf/
-    * GNU automake 1.7  (1.6 will also work)
+    * GNU automake 1.7  (1.8 and 1.6 will also work)
         - ftp://ftp.gnu.org/gnu/automake/
     * GNU libtool 1.3.4  (1.5.0 if you are compiling on Win32)
         - ftp://ftp.gnu.org/gnu/libtool/
