--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-24  Nikos Charonitakis  <frolix68@yahoo.gr>
+
+	* el.po: Updated Greek translation from
+        Ta panta rei <ta_panta_rei@flashmail.com>.
+
 2004-01-24  Jan Morén  <jan.moren@lucs.lu.se>
 
 	* sv.po: Updated Swedish translation.
