2004-01-25  Sven Neumann  <sven@gimp.org>
	* gimp-tips.xml.in: applied patch from Shlomi Fish that fixes a
	wrong menu path (bug #132028).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12156 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-25  Sven Neumann  <sven@gimp.org>
+
+	* gimp-tips.xml.in: applied patch from Shlomi Fish that fixes a
+	wrong menu path (bug #132028).
+
 2004-01-23  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
