2004-01-25  Sven Neumann  <sven@gimp.org>
	* app/text/gimptextlayout.c (gimp_text_layout_position): fixed
	text positioning for fonts where glyphs extend the logical
	rectangle (bug #132495).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12158 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-25  Sven Neumann  <sven@gimp.org>
 
+	* app/text/gimptextlayout.c (gimp_text_layout_position): fixed
+	text positioning for fonts where glyphs extend the logical
+	rectangle.
+
+2004-01-25  Sven Neumann  <sven@gimp.org>
+
 	* app/gui/info-window.c (info_window_create): don't update the fields
 	here...
 
