added bug number
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12159 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
 	* app/text/gimptextlayout.c (gimp_text_layout_position): fixed
 	text positioning for fonts where glyphs extend the logical
-	rectangle.
+	rectangle (fixes bug #132495).
 
 2004-01-25  Sven Neumann  <sven@gimp.org>
 
