2004-01-25  Manish Singh  <yosh@gimp.org>
        * plug-ins/common/postscript.c: use GSpawn instead of popen, -dBATCH,
        fixes #108659 for this plugin. Thanks to Peter Kirchgessner for the
        patch.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12160 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-25  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/common/postscript.c: use GSpawn instead of popen, -dBATCH,
+	fixes #108659 for this plugin. Thanks to Peter Kirchgessner for the
+	patch.
+
 2004-01-25  Sven Neumann  <sven@gimp.org>
 
 	* app/text/gimptextlayout.c (gimp_text_layout_position): fixed
