2004-01-26  Sven Neumann  <sven@gimp.org>
	* autogen.sh: prefer automake-1.7 over 1.8 since there are issues
	with the latter.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12163 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-26  Sven Neumann  <sven@gimp.org>
+
+	* autogen.sh: prefer automake-1.7 over 1.8 since there are issues
+	with the latter.
+
 2004-01-26  Manish Singh  <yosh@gimp.org>
 
 	* app/core/gimpdrawable-blend.c (gradient_fill_region): use memcpy
