--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-26  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+	
 2004-01-24  Nikos Charonitakis  <frolix68@yahoo.gr>
 
 	* el.po: Updated Greek translation from
