--- a/po-plug-ins/it.po
+++ b/po-plug-ins/it.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: gimp 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-01-19 04:23+0100\n"
-"PO-Revision-Date: 2004-01-09 09:33+0100\n"
+"PO-Revision-Date: 2004-01-26 13:01+0100\n"
 "Last-Translator: Marco Ciampa <ciampix@libero.it>\n"
 "Language-Team: tp@lists.linux.it\n"
 "MIME-Version: 1.0\n"
@@ -3767,9 +3767,8 @@ msgid "Unnamed"
 msgstr "Senzanome"
 
 #: plug-ins/common/gbr.c:535
-#, fuzzy
 msgid "GIMP brushes are either GRAYSCALE or RGBA"
-msgstr "I pennelli di GIMP sono o in scala di grigi o RGBA\n"
+msgstr "I pennelli di GIMP sono o in scala di grigi o RGBA"
 
 #: plug-ins/common/gbr.c:616
 msgid "Save as Brush"
@@ -6790,18 +6789,14 @@ msgid "Merge Imported Paths"
 msgstr "Fondi tracciati importati"
 
 #: plug-ins/common/tga.c:426
-#, fuzzy, c-format
+#, c-format
 msgid "Cannot read footer from '%s'"
-msgstr ""
-"Impossibile leggere i pié pagina da\n"
-"'%s'"
+msgstr "Impossibile leggere il pié di pagina da '%s'"
 
 #: plug-ins/common/tga.c:442
-#, fuzzy, c-format
+#, c-format
 msgid "Cannot read extension from '%s'"
-msgstr ""
-"Impossibile leggere l'estensione da\n"
-"'%s'"
+msgstr "Impossibile leggere l'estensione da '%s'"
 
 #: plug-ins/common/tga.c:1193
 msgid "Save as TGA"
@@ -6901,9 +6896,8 @@ msgid "_JPEG"
 msgstr "_JPEG"
 
 #: plug-ins/common/tiff.c:2049
-#, fuzzy
 msgid "Save _color values from transparent pixels"
-msgstr "Salva _valori colore dai punti trasparenti"
+msgstr "Salva valori _colore dai punti trasparenti"
 
 #: plug-ins/common/tiff.c:2064 plug-ins/common/xbm.c:1201
 msgid "Comment:"
@@ -9754,11 +9748,13 @@ msgstr ""
 "l'installazione sia completa prima di riportare quest'errore."
 
 #: plug-ins/helpbrowser/domain.c:113
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Failed to open help files:\n"
 "%s"
-msgstr "Fallito caricamento del file GFlare: '%s': %s"
+msgstr ""
+"Fallito caricamento dei file di aiuto:\n"
+"%s"
 
 #: plug-ins/helpbrowser/domain.c:115
 #, c-format
@@ -9768,23 +9764,27 @@ msgid ""
 "\n"
 "(Added entires before error anyway)"
 msgstr ""
+"Errore di elaborazione dell'aiuto:\n"
+"%s\n"
+"\n"
+"(Aggiunte voci comunque prima dell'errore)"
 
 #: plug-ins/helpbrowser/domain.c:130
 #, c-format
 msgid "Help ID '%s' unknown"
-msgstr ""
+msgstr "ID dell'aiuto '%s' sconosciuto"
 
 #: plug-ins/helpbrowser/domain.c:252
 msgid "The GIMP help files are not installed."
-msgstr ""
+msgstr "I file di aiuto di GIMP non sono installati."
 
 #: plug-ins/helpbrowser/domain.c:254
 msgid "The requested help files are not installed."
-msgstr ""
+msgstr "I file di aiuto richiesti non sono installati."
 
 #: plug-ins/helpbrowser/domain.c:261
 msgid "Please check your installation."
-msgstr ""
+msgstr "Controllare la correttezza dell'installazione."
 
 #: plug-ins/ifscompose/ifscompose.c:371
 msgid "<Image>/Filters/Render/Nature/Ifs_Compose..."
